--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <title>Page Title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="spanish.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine&effect=shadow-multiple">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine&effect=fire-animation">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine&effect=3d">
 </head>
 
-<body>
+<body class="font-effect-fire-animation">
     <h1>Spanish Notes On The Movie.</h1>
-    <h3>Notes on spanish culture.</h3>
-    <p></p>
+    <h2>Notes on spanish culture.</h2>
+    <h2 class="font-effect-3d">mexico likes baseball.<br/> Another thing is that fathers are the rulers in mexico.
+    </h2>
 </body>
 
 </html>
